[gd_scene load_steps=35 format=2]

[ext_resource path="res://scenes/IngameUI.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/ammo.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/vegur/Vegur-Light.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/textures/crosshair010.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/damage_indicator.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/vegur/Vegur-Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/textures/vignette.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/scope.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/circle.png" type="Texture" id=11]
[ext_resource path="res://assets/shaders/CanvasItem/greyscale.shader" type="Shader" id=12]
[ext_resource path="res://assets/styles/menu_buttons/font.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/styles/menu_buttons/hover.tres" type="StyleBox" id=14]
[ext_resource path="res://assets/styles/menu_buttons/pressed.tres" type="StyleBox" id=15]
[ext_resource path="res://assets/styles/menu_buttons/normal.tres" type="StyleBox" id=16]
[ext_resource path="res://assets/textures/map.png" type="Texture" id=17]
[ext_resource path="res://assets/textures/circle-512.png" type="Texture" id=18]
[ext_resource path="res://assets/UI/left.png" type="Texture" id=20]
[ext_resource path="res://assets/UI/right.png" type="Texture" id=21]
[ext_resource path="res://assets/styles/menu_buttons_without/hover.tres" type="StyleBox" id=22]
[ext_resource path="res://assets/styles/menu_buttons_without/pressed.tres" type="StyleBox" id=23]
[ext_resource path="res://assets/styles/menu_buttons_without/normal.tres" type="StyleBox" id=24]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 35
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 18
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 0.729412 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 0.364706 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 30
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 2

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 12 )
shader_param/blurSize = 25

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.294118 )

[node name="IngameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Vignette" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ammo" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo_icon" type="Sprite" parent="ammo"]
modulate = Color( 1, 1, 1, 0.729412 )
position = Vector2( 101.421, 102.016 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 4 )

[node name="max" type="Label" parent="ammo"]
margin_left = 62.9299
margin_top = 94.6535
margin_right = 80.9299
margin_bottom = 119.654
custom_fonts/font = SubResource( 1 )
text = "15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current" type="Label" parent="ammo"]
margin_left = 19.283
margin_top = 81.9553
margin_right = 51.283
margin_bottom = 124.955
custom_fonts/font = SubResource( 2 )
text = "15"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slash" type="Label" parent="ammo"]
margin_left = 54.2409
margin_top = 96.9442
margin_right = 90.2409
margin_bottom = 121.944
custom_fonts/font = SubResource( 3 )
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max" type="Label" parent="health"]
margin_left = 49.647
margin_top = 73.699
margin_right = 67.647
margin_bottom = 98.6995
custom_fonts/font = SubResource( 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current" type="Label" parent="health"]
margin_left = 6.0
margin_top = 61.0
margin_right = 38.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slash" type="Label" parent="health"]
margin_left = 40.958
margin_top = 75.989
margin_right = 76.958
margin_bottom = 100.989
custom_fonts/font = SubResource( 3 )
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="health"]
margin_left = 9.0
margin_top = 104.086
margin_right = 199.0
margin_bottom = 118.086
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scope" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Scope"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0
alignment = 1

[node name="Black" type="ColorRect" parent="Scope/HBoxContainer"]
margin_right = 212.0
margin_bottom = 600.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Scope/HBoxContainer"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Black" type="ColorRect" parent="Scope/HBoxContainer/VBoxContainer"]
margin_right = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Scope" type="TextureRect" parent="Scope/HBoxContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true

[node name="Black2" type="ColorRect" parent="Scope/HBoxContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Black2" type="ColorRect" parent="Scope/HBoxContainer"]
margin_left = 812.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="crosshair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.67554
margin_top = -8.27014
margin_right = 24.3245
margin_bottom = 23.7299
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_indicator" type="Node2D" parent="crosshair"]
position = Vector2( 15.25, 16.5 )

[node name="Sprite" type="Sprite" parent="crosshair/damage_indicator"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -18.0109 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="rotation_helper" type="Spatial" parent="crosshair"]

[node name="cooldown" type="TextureProgress" parent="crosshair"]
modulate = Color( 1, 1, 1, 0.364706 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )
step = 0.01
texture_progress = ExtResource( 11 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="death_ui" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="death_ui"]
margin_right = 1004.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="death_ui/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 25.0

[node name="respawning_text" type="Label" parent="death_ui/VBoxContainer/CenterContainer"]
margin_left = 398.0
margin_right = 606.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Respawning in 5 seconds..."
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="death_ui"]
margin_right = 1004.0
margin_bottom = 580.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="death_ui/VBoxContainer2"]
margin_top = 514.0
margin_right = 1004.0
margin_bottom = 539.0

[node name="title" type="Label" parent="death_ui/VBoxContainer2/CenterContainer2"]
margin_left = 430.0
margin_right = 574.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "You were killed by"
align = 1

[node name="CenterContainer3" type="CenterContainer" parent="death_ui/VBoxContainer2"]
margin_top = 543.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="username" type="Label" parent="death_ui/VBoxContainer2/CenterContainer3"]
margin_left = 442.0
margin_right = 561.0
margin_bottom = 37.0
custom_colors/font_color = Color( 1, 0.439216, 0.309804, 1 )
custom_fonts/font = SubResource( 5 )
text = "username"
align = 1

[node name="respawn_timer" type="Timer" parent="death_ui"]
one_shot = true

[node name="minimap" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rotation_helper" type="Node2D" parent="minimap"]
position = Vector2( -75, 75 )

[node name="mask" type="Light2D" parent="minimap/rotation_helper"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )
mode = 2
range_item_cull_mask = 16

[node name="map_texture" type="Sprite" parent="minimap/rotation_helper/mask"]
light_mask = 16
material = SubResource( 6 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 17 )

[node name="player" type="Sprite" parent="minimap"]
modulate = Color( 0, 1, 0.787402, 1 )
position = Vector2( -75, 75 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 18 )

[node name="pause_menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -322.906, 135.125 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="greyscale" type="ColorRect" parent="pause_menu"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ingame_menu" type="MarginContainer" parent="pause_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="pause_menu/ingame_menu"]
margin_right = 964.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/ingame_menu/HBoxContainer"]
margin_right = 554.0
margin_bottom = 540.0

[node name="spacer" type="Control" parent="pause_menu/ingame_menu/HBoxContainer/VBoxContainer"]
margin_right = 554.0
rect_min_size = Vector2( 554, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="pause_menu/ingame_menu/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 554.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 275.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Continue" type="Button" parent="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 275.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
text = " Continue"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 275.0
margin_bottom = 293.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
text = " Settings"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disconnect" type="Button" parent="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 323.0
margin_right = 275.0
margin_bottom = 373.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
text = " Disconnect"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="Control" parent="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 279.0
margin_right = 554.0
margin_bottom = 536.0
size_flags_horizontal = 3

[node name="OtherPlayers" type="ScrollContainer" parent="pause_menu/ingame_menu/HBoxContainer"]
margin_left = 558.0
margin_right = 964.0
margin_bottom = 540.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/ingame_menu/HBoxContainer/OtherPlayers"]
margin_right = 406.0
size_flags_horizontal = 3

[node name="ingame_settings" type="MarginContainer" parent="pause_menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="pause_menu/ingame_settings"]
margin_right = 964.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/ingame_settings/HBoxContainer"]
margin_right = 554.0
margin_bottom = 540.0

[node name="spacer" type="Control" parent="pause_menu/ingame_settings/HBoxContainer/VBoxContainer"]
margin_right = 554.0
rect_min_size = Vector2( 554, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="pause_menu/ingame_settings/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 554.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/ingame_settings/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 275.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="MouseSensitivity" type="Button" parent="pause_menu/ingame_settings/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 275.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
text = " Mouse Sensitivity"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WIP" type="Button" parent="pause_menu/ingame_settings/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 275.0
margin_bottom = 293.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
text = " WIP"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="pause_menu/ingame_settings/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 323.0
margin_right = 275.0
margin_bottom = 373.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
text = " Back"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="Control" parent="pause_menu/ingame_settings/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 279.0
margin_right = 554.0
margin_bottom = 536.0
size_flags_horizontal = 3

[node name="mouse_sensitivity_settings" type="Panel" parent="pause_menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/mouse_sensitivity_settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer"]
margin_top = 206.0
margin_right = 1024.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 13 )
text = "Mouse Sensitivity"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer"]
margin_top = 268.0
margin_right = 1024.0
margin_bottom = 318.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer2"]
margin_left = 374.0
margin_right = 649.0
margin_bottom = 50.0
rect_min_size = Vector2( 275, 50 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 58.0
margin_bottom = 50.0
hint_tooltip = "Max Players"
size_flags_horizontal = 3
texture_normal = ExtResource( 20 )
expand = true
stretch_mode = 5

[node name="MouseSensitivity" type="LineEdit" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 62.0
margin_right = 212.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "1"
align = 1
max_length = 5
placeholder_alpha = 0.4
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureButton" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 216.0
margin_right = 275.0
margin_bottom = 50.0
hint_tooltip = "Max Players"
size_flags_horizontal = 3
texture_normal = ExtResource( 21 )
expand = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer"]
margin_top = 343.0
margin_right = 1024.0
margin_bottom = 393.0
custom_constants/separation = 50
alignment = 1

[node name="Cancel" type="Button" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer"]
margin_left = 437.0
margin_right = 587.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = ExtResource( 24 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apply" type="Button" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer"]
margin_left = 437.0
margin_right = 587.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = ExtResource( 24 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warning" type="Label" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer"]
visible = false
margin_top = 206.0
margin_right = 1024.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 13 )
text = "That is not a valid number!"
align = 1

[node name="invalid_value" type="Label" parent="pause_menu/mouse_sensitivity_settings/VBoxContainer"]
visible = false
margin_top = 206.0
margin_right = 1024.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 13 )
text = "Please choose a number between 0 and 10"
align = 1

[node name="Tween" type="Tween" parent="pause_menu"]

[connection signal="timeout" from="death_ui/respawn_timer" to="." method="_on_respawn_timer_timeout"]
[connection signal="pressed" from="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="pause_menu/ingame_menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="pause_menu/ingame_settings/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/MouseSensitivity" to="." method="_on_MouseSensitivity_pressed"]
[connection signal="pressed" from="pause_menu/ingame_settings/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer2/HBoxContainer/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer2/HBoxContainer/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="pause_menu/mouse_sensitivity_settings/VBoxContainer/HBoxContainer/Apply" to="." method="_on_Apply_pressed"]
